fix category layout issue

--- a/src/styles/category/productCategory.module.css
+++ b/src/styles/category/productCategory.module.css
@@ -1,6 +1,22 @@
 .productWraper {
   margin-top: 30px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  grid-template-columns: repeat(5, 1fr);
   gap: 15px;
+}
+
+@media (max-width: 1024px) {
+  .productWraper {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 900px) {
+  .productWraper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 700px) {
+  .productWraper {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
