--- a/src/styles/componensts/productCard.module.css
+++ b/src/styles/componensts/productCard.module.css
@@ -14,6 +14,9 @@
   padding: 20px;
   margin: 0;
 }
+.img img {
+  margin: auto;
+}
 .details {
   padding: 15px;
   flex: 1 1 auto;
